Revision history for Perl module Test::WWW::Mechanize::Mojo :

v0.0.12     Tue 21 May 21:10:56 IDT 2013
    - Add t/style-trailing-space.t and get rid of trailing space.

v0.0.11     Wed  1 Aug 20:55:21 IDT 2012
    - Got the POD coverage ( t/pod-coverage.t ) to pass again.

v0.0.10     Sun May 13 23:16:58 IDT 2012
    - Update the module for recent versions of Mojolicious where
    $t->max_redirects() was removed (after being deprecated).
        - Thanks to tempire on #mojo on irc.perl.org for shedding some
        light on this issue.
    - This release coincides with the birthday of Sebastian Riedel
    ( https://metacpan.org/author/SRI ), the creator and maintainer
    of Mojolicious (and Catalyst previously). Happy birthday, Sebastian!

v0.0.9      Thu May 19 23:14:29 IDT 2011
    - Got rid of warnings by switching from $t->client to $t->ua.
        - Thanks to Mirko Westermeier

v0.0.8      Wed Jan 26 14:56:01 IST 2011
    - Convert the mentioning of CATALYST_SERVER to MOJO_SERVER.
        - thanks to Insurgent Software.

v0.0.7      Mon Jan 17 15:55:00 IST 2011
    - Fixed mojjy.pl and the lib/Test/WWW/Mechanize/Mojo.pm code in recent
    Mojo versions.
        - app->start instead of shagadelic.
        - some tweaks to the ->$method->res.

v0.0.6      Fri Sep  3 20:43:26 IDT 2010
    - Fixed mojjy.pl to avoid double encoding in recent Mojo versions.

v0.0.5      Mon Jun 14 21:54:45 IDT 2010
    - Removed the call to Test::Mojo->redirect() which is no longer
    implemented in recent Mojos.

v0.0.4      Wed Mar 17 16:01:20 IST 2010
    - Now evaluating the GET parameters in requests by using URI.pm's
    ->path_query() instead of ->path().

v0.0.3      Thu Mar  4 00:35:10 IST 2010
    - Fix submit_form_ok on the contemporary Mojo::Client . (with a test).

v0.0.2      Tue Mar  2 23:27:43 IST 2010
    - Add a missing empty line before an "=end". Without it, the POD
    was not displayed properly by perldoc and by http://search.cpan.org/ .