@@ -6,7 +6,7 @@ build_requires: {}
 configure_requires:
   Module::Build: 0.36
 dynamic_config: 1
-generated_by: 'Module::Build version 0.3901, CPAN::Meta::Converter version 2.120921'
+generated_by: 'Module::Build version 0.4005, CPAN::Meta::Converter version 2.120921'
 keywords: []
 license: perl
 meta-spec:
@@ -22,7 +22,7 @@ requires:
   Encode: 0
   HTML::Entities: 0
   LWP: 5.816
-  Mojolicious: 1.01
+  Mojolicious: 4.07
   Mojolicious::Lite: 0
   Test::WWW::Mechanize: 1.14
   WWW::Mechanize: 1.50
@@ -35,3 +35,7 @@ resources:
   license: http://dev.perl.org/licenses/
   repository: http://bitbucket.org/shlomif/perl-test-www-mechanize-mojo
 version: v0.0.12
+x_test_requires:
+  Test::Exception: 0
+  Test::Mojo: 0
+  Test::More: 0
