@@ -1,4 +1,4 @@
-# Note: this file was auto-generated by Module::Build::Compat version 0.39_01
+# Note: this file was auto-generated by Module::Build::Compat version 0.4005
 use ExtUtils::MakeMaker;
 WriteMakefile
 (
@@ -9,7 +9,7 @@ WriteMakefile
                    'Encode' => 0,
                    'HTML::Entities' => 0,
                    'LWP' => '5.816',
-                   'Mojolicious' => '1.01',
+                   'Mojolicious' => '4.07',
                    'Mojolicious::Lite' => 0,
                    'Test::WWW::Mechanize' => '1.14',
                    'WWW::Mechanize' => '1.50',
